src/test/deca/syntax/invalid/avecObjet/noParenthesisMethode.deca
class A {
    int a ;
    int next {
        return a + 1;
    }
}